deployment files, updated some auth, added sql sample data file password is 'password'